# vcmp-browser

./: README.md  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx  main.less
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: servers.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: 7z.rs  download.rs  extract.rs  launch.rs  main.rs  rpc.rs  server.rs
src/components/: DraggableHeader.jsx
src/components/Navbar/: CustomIcon.jsx  Nav.context.jsx  Navbar.jsx  navbar.less
src/components/ServerInfoDrawer/: ServerInfoDrawer.jsx  serverinfodrawer.less
src/components/ServerList/: AddFav.jsx  Header.jsx  LaunchModal.jsx  PasswordModal.jsx  Searchbar.jsx  ServerList.jsx  serverlist.less
src/pages/about/: About.jsx  about.less
src/pages/customize/: Customize.jsx  customize.less
src/pages/dashboard/: Dashboard.jsx  dashboard.less
src/pages/settings/: Settings.jsx  settings.less
src/utils/: config.utils.js  httpd.utils.js  resfile.util.js  server.util.js  settings.context.jsx  settings.util.js  update.util.js
